fix for scss file on small devices

--- a/dev/styles/_hero.scss
+++ b/dev/styles/_hero.scss
@@ -57,6 +57,7 @@
     }
     h5 {
       font-size: 16px;
+      padding: 10px;
     }
   }
   .hero-page__buttons {
